--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.interface {
+/* .interface {
   position: fixed;
   right: 0;
   top: 0;
@@ -6,4 +6,17 @@
   width: 300px;
   height: 500px;
   overflow-y: scroll;
+} */
+
+
+#interface {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: whitesmoke;
+  width: 300px;
+  height: 500px;
+  overflow-y: scroll;
+  visibility: hidden;
+
 }
