--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  background-color: whitesmoke;
+  background-color: rgba(245, 245,245,.6);
   width: 300px;
   height: 500px;
   overflow-y: scroll;
